--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>framework</groupId>
 	<artifactId>TestDriven_TestNG</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>TestDriven_TestNG</name>
+	<version>0.0.1</version>
+	<name>TDD_Lighthouse_Healenium</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,6 +25,7 @@
 		<aspectj>1.9.21</aspectj>
 		<log4j>3.0.0-beta1</log4j>
 		<healenium>3.4.8</healenium>
+		<maven-javadoc>3.6.3</maven-javadoc>
 	</properties>
 
 
@@ -39,6 +40,23 @@
 			</resource>
 		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc}</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<source>17</source>
+					<useStandardDocletOptions>false</useStandardDocletOptions>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
