--- a/src/test/resources/Constants.properties
+++ b/src/test/resources/Constants.properties
@@ -4,11 +4,12 @@ browserDetails = Execution Manager
 
 
 ##Execution Details
-# Local, or BrowserStack
+# Local, or BrowserStack or Grid
 executionPlatform = Local
 defaultWaitTime =  10
 reportLocation =
 defaultDownloadPath =
+gridHubUrl = http://localhost:4444/
 
 ##Application related
 URL = https://www.google.com/
