--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Create Directory
+          run: mkdir -p tokens
+
+      - name: Set up token.json
+        run: echo '${{ secrets.SERVICE_ACCOUNT }}' > tokens/ServiceAccount.json
+
       - name: Set up JDK 21
         uses: actions/setup-java@v1
         with:
