--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<google-service>v4-rev20230227-2.0.0</google-service>
 		<google-api-client>2.2.0</google-api-client>
 		<google-jetty>1.34.1</google-jetty>
+		<google-oauth2>1.3.0</google-oauth2>
+		<google-jackson2>1.43.3</google-jackson2>
 		<common-lang3>3.14.0</common-lang3>
 		<common-io>2.15.1</common-io>
 		<allure>2.25.0</allure>
@@ -162,6 +164,16 @@
 			<groupId>com.google.oauth-client</groupId>
 			<artifactId>google-oauth-client-jetty</artifactId>
 			<version>${google-jetty}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>${google-jackson2}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-oauth2-http</artifactId>
+			<version>${google-oauth2}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
