--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Create Directory
-          run: mkdir -p tokens
-
       - name: Set up token.json
-        run: echo '${{ secrets.SERVICE_ACCOUNT }}' > tokens/ServiceAccount.json
+        run: echo '${{ secrets.SERVICE_ACCOUNT }}' > /ServiceAccount.json
 
       - name: Set up JDK 21
         uses: actions/setup-java@v1
