--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up token.json
-        run: echo '${{ secrets.SERVICE_ACCOUNT }}' > /ServiceAccount.json
+        run: echo '${{ secrets.SERVICE_ACCOUNT }}' > ServiceAccount.json
 
       - name: Set up JDK 21
         uses: actions/setup-java@v1
